--- a/accounts/templates/dashboard/accounts/account_list.html
+++ b/accounts/templates/dashboard/accounts/account_list.html
@@ -27,6 +27,9 @@
 	<div class="sub-header">
 		<h2>{% trans "All accounts" %}</h2>
 	</div>
+
+	<p><a href="{% url accounts-create %}" class="btn btn-large btn-primary">{% trans "Create a new account" %}</a></p>
+
 	{% if accounts.count %}
 		<table class="table table-striped table-bordered">
 			<tr>
