--- a/accounts/templates/dashboard/accounts/account_list.html
+++ b/accounts/templates/dashboard/accounts/account_list.html
@@ -28,12 +28,14 @@
 		<h2>{% trans "All accounts" %}</h2>
 	</div>
 
-	<p><a href="{% url accounts-create %}" class="btn btn-large btn-primary">{% trans "Create a new account" %}</a></p>
 
 	{% if accounts.count %}
 		<table class="table table-striped table-bordered">
 			<tr>
 				<th>{% trans "Name" %}</th>
+				<th>{% trans "Code" %}</th>
+				<th>{% trans "End date" %}</th>
+				<th>{% trans "Start date" %}</th>
 				<th>{% trans "Balance" %}</th>
 				<th>{% trans "Date created" %}</th>
 				<th></th>
@@ -41,10 +43,13 @@
 			{% for account in accounts %}
 			<tr>
 				<td>{{ account.name }}</td>
-				<td>{{ account.balance }}</td>
+				<td>{{ account.code|default:"-" }}</td>
+				<td>{{ account.start_date|default:"-" }}</td>
+				<td>{{ account.end_date|default:"-" }}</td>
+				<td>{{ account.balance|currency }}</td>
 				<td>{{ account.date_created }}</td>
 				<td>
-					<a class="btn btn-primary" href="">{% trans "Edit" %}</a>
+					<a href="{% url accounts-detail account.id %}" class="btn">Transactions</a>
 				</td>
 			</tr>
 			{% endfor %}
@@ -53,6 +58,8 @@
 			{% include "catalogue/partials/pagination.html" %}
 		{% endif %}
 	{% else %}
-	<p>{% trans "No accounts found." %}</p>
+		<p>{% trans "No accounts found." %}</p>
 	{% endif %}
+
+	<p><a href="{% url accounts-create %}" class="btn btn-large btn-primary">{% trans "Create a new account" %}</a></p>
 {% endblock dashboard_content %}
