Add support for account categories

--- a/accounts/templates/dashboard/accounts/account_detail.html
+++ b/accounts/templates/dashboard/accounts/account_detail.html
@@ -43,6 +43,10 @@
 			<td>{{ account.code|default:"-" }}</td>
 		</tr>
 		<tr>
+			<th>Category</th>
+			<td>{{ account.category|default:"-" }}</td>
+		</tr>
+		<tr>
 			<th>Balance</th>
 			<td>{{ account.balance|currency }}</td>
 		</tr>
