--- a/accounts/templates/dashboard/accounts/account_list.html
+++ b/accounts/templates/dashboard/accounts/account_list.html
@@ -28,12 +28,12 @@
 		<h2>{% trans "All accounts" %}</h2>
 	</div>
 
-
 	{% if accounts.count %}
 		<table class="table table-striped table-bordered">
 			<tr>
 				<th>{% trans "Name" %}</th>
 				<th>{% trans "Code" %}</th>
+				<th>{% trans "Category" %}</th>
 				<th>{% trans "End date" %}</th>
 				<th>{% trans "Start date" %}</th>
 				<th>{% trans "Balance" %}</th>
@@ -44,6 +44,7 @@
 			<tr>
 				<td>{{ account.name }}</td>
 				<td>{{ account.code|default:"-" }}</td>
+				<td>{{ account.category|default:"-" }}</td>
 				<td>{{ account.start_date|default:"-" }}</td>
 				<td>{{ account.end_date|default:"-" }}</td>
 				<td>{{ account.balance|currency }}</td>
