--- a/accounts/templates/dashboard/accounts/account_detail.html
+++ b/accounts/templates/dashboard/accounts/account_detail.html
@@ -31,31 +31,41 @@
 <table id="" class="table">
 	<tbody>
 		<tr>
-			<th>Name</th>
+			<th>{% trans "Name" %}</th>
 			<td>{{ account.name }}</td>
 		</tr>
 		<tr>
-			<th>Description</th>
+			<th>{% trans "Description" %}</th>
 			<td>{{ account.description|default:"-" }}</td>
 		</tr>
 		<tr>
-			<th>Code</th>
+			<th>{% trans "Code" %}</th>
 			<td>{{ account.code|default:"-" }}</td>
 		</tr>
 		<tr>
-			<th>Category</th>
+			<th>{% trans "Category" %}</th>
 			<td>{{ account.category|default:"-" }}</td>
 		</tr>
 		<tr>
-			<th>Balance</th>
+			<th>{% trans "Balance" %}</th>
 			<td>{{ account.balance|currency }}</td>
 		</tr>
 		<tr>
-			<th>Start date</th>
+			<th>{% trans "Credit limit" %}</th>
+			<td>
+				{% if not account.has_credit_limit %}
+					{% trans "No limit" %}
+				{% else %}
+					{{ account.credit_limit|currency }}
+				{% endif %}
+			</td>
+		</tr>
+		<tr>
+			<th>{% trans "Start date" %}</th>
 			<td>{{ account.start_date|default:"-" }}</td>
 		</tr>
 		<tr>
-			<th>End date</th>
+			<th>{% trans "End date" %}</th>
 			<td>{{ account.end_date|default:"-" }}</td>
 		</tr>
 	</tbody>
@@ -66,9 +76,9 @@
 	<table id="" class="table">
 		<thead>
 			<tr>
-				<th>Transfer</th>
-				<th>Amount</th>
-				<th>Date</th>
+				<th>{% trans "Transfer" %}</th>
+				<th>{% trans "Amount" %}</th>
+				<th>{% trans "Date" %}</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -82,7 +92,7 @@
 		</tbody>
 	</table>
 {% else %}
-	<p>No transfers.</p>
+<p>{% trans "No transfers." %}</p>
 {% endif %}
 
 {% endblock dashboard_content %}
