--- a/accounts/templates/dashboard/accounts/account_detail.html
+++ b/accounts/templates/dashboard/accounts/account_detail.html
@@ -84,7 +84,7 @@
 		<tbody>
 			{% for txn in account.transactions.all %}
 			<tr>
-				<td><a href="{% url transfers-list %}">{{ txn.transfer }}</a></td>
+				<td><a href="{% url transfers-detail txn.transfer.id %}">{{ txn.transfer }}</a></td>
 				<td>{{ txn.amount|currency }}</td>
 				<td>{{ txn.date_created }}</td>
 			</tr>
