--- a/accounts/templates/dashboard/accounts/account_detail.html
+++ b/accounts/templates/dashboard/accounts/account_detail.html
@@ -71,8 +71,8 @@
 	</tbody>
 </table>
 
-<h2>Transactions</h2>
-{% if account.transactions.all.count %}
+<h2>{% trans "Transactions" %}</h2>
+{% if transactions %}
 	<table id="" class="table">
 		<thead>
 			<tr>
@@ -82,7 +82,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			{% for txn in account.transactions.all %}
+			{% for txn in transactions %}
 			<tr>
 				<td><a href="{% url transfers-detail txn.transfer.id %}">{{ txn.transfer }}</a></td>
 				<td>{{ txn.amount|currency }}</td>
@@ -91,8 +91,11 @@
 			{% endfor %}
 		</tbody>
 	</table>
+	{% if page_obj %}
+		{% include "catalogue/partials/pagination.html" %}
+	{% endif %}
 {% else %}
-<p>{% trans "No transfers." %}</p>
+	<p>{% trans "No transfers." %}</p>
 {% endif %}
 
 {% endblock dashboard_content %}
