Add custom object for recording allocations

--- a/sandbox/templates/checkout/payment_details.html
+++ b/sandbox/templates/checkout/payment_details.html
@@ -52,7 +52,7 @@
 						<td>{{ code }}</td> 
 						<td>{{ amount|currency }}</td>
 						<td>
-							<button type="submit" class="btn" name="remove_{{ allocation.0 }}">Remove</button>
+							<button type="submit" class="btn" name="remove_{{ code }}">Remove</button>
 						</td>
 					</tr>
 				{% endfor %}
