Add ability to freeze an account

--- a/accounts/templates/dashboard/accounts/account_list.html
+++ b/accounts/templates/dashboard/accounts/account_list.html
@@ -53,6 +53,7 @@
 				<td>{{ account.date_created }}</td>
 				<td>
 					<a href="{% url accounts-detail account.id %}" class="btn">Transactions</a>
+					<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">Freeze</a>
 				</td>
 			</tr>
 			{% endfor %}
