--- a/accounts/templates/dashboard/accounts/account_list.html
+++ b/accounts/templates/dashboard/accounts/account_list.html
@@ -58,7 +58,9 @@
 					<a href="{% url accounts-update account.id %}" class="btn">Edit</a>
 					<a href="{% url accounts-detail account.id %}" class="btn">Transactions</a>
 					{% if not account.is_frozen %}
-					<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">Freeze</a>
+						<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">Freeze</a>
+					{% else %}
+						<a href="{% url accounts-thaw account.id %}" class="btn btn-success">Thaw</a>
 					{% endif %}
 				</td>
 			</tr>
