--- a/accounts/templates/dashboard/accounts/account_thaw.html
+++ b/accounts/templates/dashboard/accounts/account_thaw.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-{% trans "Freeze account" %} #{{ account.id }} | {{ block.super }}
+{% trans "Thaw account" %} #{{ account.id }} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -16,13 +16,13 @@
 		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{% trans "Freeze account" %} #{{ account.id }}</a></li>
+	<li class="active"><a href=".">{% trans "Thaw account" %} #{{ account.id }}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>{% trans "Freeze account?" %}</h1>
+	<h1>{% trans "Thaw account?" %}</h1>
 </div>
 {% endblock header %}
 
@@ -33,8 +33,7 @@
 <form action="." method="post">
 	{% csrf_token %}
 	{{ form.as_p }}
-	<button type="submit" class="btn btn-large btn-danger">{% trans "Freeze" %}</button>
+	<button type="submit" class="btn btn-large btn-success">{% trans "Thaw" %}</button>
 </form>
-
 
 {% endblock dashboard_content %}
