--- a/accounts/templates/dashboard/accounts/account_list.html
+++ b/accounts/templates/dashboard/accounts/account_list.html
@@ -55,12 +55,13 @@
 				<td>{{ account.num_transactions }}</td>
 				<td>{{ account.date_created }}</td>
 				<td>
-					<a href="{% url accounts-update account.id %}" class="btn">Edit</a>
-					<a href="{% url accounts-detail account.id %}" class="btn">Transactions</a>
+					<a href="{% url accounts-update account.id %}" class="btn">{% trans "Edit" %}</a>
+					<a href="{% url accounts-detail account.id %}" class="btn">{% trans "Transactions" %}</a>
+					<a href="{% url accounts-top-up account.id %}" class="btn">{% trans "Top-up" %}</a>
 					{% if not account.is_frozen %}
-						<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">Freeze</a>
+					<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
 					{% else %}
-						<a href="{% url accounts-thaw account.id %}" class="btn btn-success">Thaw</a>
+					<a href="{% url accounts-thaw account.id %}" class="btn btn-success">{% trans "Thaw" %}</a>
 					{% endif %}
 				</td>
 			</tr>
