--- a/accounts/templates/dashboard/accounts/account_detail.html
+++ b/accounts/templates/dashboard/accounts/account_detail.html
@@ -29,6 +29,15 @@
 {% block dashboard_content %}
 
 {% include 'dashboard/accounts/partials/account_detail.html' %}
+<p>
+	<a class="btn" href="{% url accounts-update account.id %}">Edit</a>
+	<a href="{% url accounts-top-up account.id %}" class="btn">{% trans "Top-up" %}</a>
+	{% if not account.is_frozen %}
+	<a href="{% url accounts-freeze account.id %}" class="btn btn-danger">{% trans "Freeze" %}</a>
+	{% else %}
+	<a href="{% url accounts-thaw account.id %}" class="btn btn-success">{% trans "Thaw" %}</a>
+	{% endif %}
+</p>
 
 <h2>{% trans "Transactions" %}</h2>
 {% if transactions %}
