--- a/accounts/templates/dashboard/accounts/partials/account_detail.html
+++ b/accounts/templates/dashboard/accounts/partials/account_detail.html
@@ -20,8 +20,8 @@
 			<td>{{ account.code|default:"-" }}</td>
 		</tr>
 		<tr>
-			<th>{% trans "Category" %}</th>
-			<td>{{ account.category|default:"-" }}</td>
+			<th>{% trans "Account type" %}</th>
+			<td>{{ account.account_type.full_name }}</td>
 		</tr>
 		<tr>
 			<th>{% trans "Balance" %}</th>
