Rework settings for min load amount, and max account value

--- a/accounts/templates/dashboard/accounts/account_top_up.html
+++ b/accounts/templates/dashboard/accounts/account_top_up.html
@@ -33,7 +33,7 @@
 	{% if account.is_open %}
 	<form action="." method="post">
 		{% csrf_token %}
-		{{ form.as_p }}
+		{% include 'partials/form_fields.html' %}
 		<button type="submit" class="btn btn-large btn-success">{% trans "Save" %}</button>
 	</form>
 	{% else %}
