--- a/accounts/templates/dashboard/accounts/transfer_list.html
+++ b/accounts/templates/dashboard/accounts/transfer_list.html
@@ -12,7 +12,7 @@
 	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
-	<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
+	<a href="{% url code-accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">{% trans "Transfers" %}</a></li>
