--- a/accounts/templates/dashboard/accounts/account_freeze.html
+++ b/accounts/templates/dashboard/accounts/account_freeze.html
@@ -13,7 +13,7 @@
         <span class="divider">/</span>
     </li>
     <li>
-		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
+		<a href="{% url code-accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">{% trans "Freeze account" %} #{{ account.id }}</a></li>
@@ -34,6 +34,7 @@
 	{% csrf_token %}
 	{{ form.as_p }}
 	<button type="submit" class="btn btn-large btn-danger">{% trans "Freeze" %}</button>
+	or <a href="{% url code-accounts-list %}">cancel</a>.
 </form>
 
 
