--- a/accounts/templates/dashboard/accounts/transfer_detail.html
+++ b/accounts/templates/dashboard/accounts/transfer_detail.html
@@ -13,7 +13,7 @@
         <span class="divider">/</span>
     </li>
     <li>
-		<a href="{% url code-accounts-list %}">{% trans "Accounts" %}</a>
+		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">{% trans "Transfer" %} #{{ transfer.reference }}</a></li>
