A user can use an user-account to pay for an order
* Add checks to ensure only the right users can use user-accounts

--- a/accounts/templates/dashboard/accounts/account_detail.html
+++ b/accounts/templates/dashboard/accounts/account_detail.html
@@ -47,6 +47,7 @@
 				<th>{% trans "Transfer" %}</th>
 				<th>{% trans "Amount" %}</th>
 				<th>{% trans "Description" %}</th>
+				<th>{% trans "Authorised by" %}</th>
 				<th>{% trans "Date" %}</th>
 			</tr>
 		</thead>
@@ -56,6 +57,7 @@
 				<td><a href="{% url transfers-detail txn.transfer.id %}">{{ txn.transfer }}</a></td>
 				<td>{{ txn.amount|currency }}</td>
 				<td>{{ txn.transfer.description|default:"-" }}</td>
+				<td>{{ txn.transfer.user }}</td>
 				<td>{{ txn.date_created }}</td>
 			</tr>
 			{% endfor %}
