--- a/accounts/templates/dashboard/accounts/partials/account_detail.html
+++ b/accounts/templates/dashboard/accounts/partials/account_detail.html
@@ -63,6 +63,12 @@
 		</tr>
 		{% endif %}
 		{% endwith %}
+		{% if account.product_range %}
+		<tr>
+			<th>Can be spent on products from range</th>
+			<td><a href="{% url dashboard:range-update account.product_range.id %}">{{ account.product_range }}</a></td>
+		</tr>
+		{% endif %}
 	</tbody>
 </table>
 
