--- a/accounts/templates/dashboard/accounts/account_list.html
+++ b/accounts/templates/dashboard/accounts/account_list.html
@@ -34,8 +34,8 @@
 
 	<form method="get" action=".">
 		{% include 'partials/form_fields.html' %}
-		<button type="submit" class="btn btn-primary">Search</button>
-		or <a href="{% url accounts-list %}">reset</a>.
+		<button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
+		or <a href="{% url accounts-list %}">{% trans "reset" %}</a>.
 	</form>
 
 	<div class="sub-header">
