--- a/accounts/templates/dashboard/accounts/account_form.html
+++ b/accounts/templates/dashboard/accounts/account_form.html
@@ -28,9 +28,11 @@
 
 {% block dashboard_content %}
 
-{% include 'dashboard/accounts/partials/account_detail.html' %}
+{% if account %}
+	{% include 'dashboard/accounts/partials/account_detail.html' %}
+	<h2>{% trans "Edit this account" %}</h2>
+{% endif %}
 
-<h2>{% trans "Edit this account" %}</h2>
 <form action="." method="post">
 	{% csrf_token %}
 	<span class="help-block">{{ form.non_field_errors }}</span>
