Add an order_number field to transfer model
Additional meta data to make reporting easier.

--- a/accounts/templates/dashboard/accounts/transfer_detail.html
+++ b/accounts/templates/dashboard/accounts/transfer_detail.html
@@ -47,6 +47,10 @@
 			<td>{{ transfer.amount|currency }}</td>
 		</tr>
 		<tr>
+			<th>{% trans "Order number" %}</th>
+			<td>{{ transfer.order_number|default:"-" }}</td>
+		</tr>
+		<tr>
 			<th>{% trans "Description" %}</th>
 			<td>{{ transfer.description|default:"-" }}</td>
 		</tr>
