--- a/accounts/templates/dashboard/accounts/transfer_list.html
+++ b/accounts/templates/dashboard/accounts/transfer_list.html
@@ -48,6 +48,7 @@
 				<th>{% trans "Source" %}</th>
 				<th>{% trans "Destination" %}</th>
 				<th>{% trans "Amount" %}</th>
+				<th>{% trans "Order number" %}</th>
 				<th>{% trans "Description" %}</th>
 				<th>{% trans "Authorised by" %}</th>
 				<th>{% trans "Date created" %}</th>
@@ -58,6 +59,7 @@
 				<td><a href="{% url accounts-detail transfer.source.id %}">{{ transfer.source }}</a></td>
 				<td><a href="{% url accounts-detail transfer.destination.id %}">{{ transfer.destination }}</a></td>
 				<td>{{ transfer.amount|currency }}</td>
+				<td>{{ transfer.order_number|default:"-" }}</td>
 				<td>{{ transfer.description|default:"-" }}</td>
 				<td>{{ transfer.user }}</td>
 				<td>{{ transfer.date_created }}</td>
