--- a/accounts/templates/dashboard/accounts/transfer_detail.html
+++ b/accounts/templates/dashboard/accounts/transfer_detail.html
@@ -16,13 +16,13 @@
 		<a href="{% url accounts-list %}">{% trans "Accounts" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">{% trans "Transfer" %} #{{ transfer.reference }}</a></li>
+	<li class="active"><a href=".">{% trans "Transfer" %} {{ transfer.reference }}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>Transfer #{{ transfer.reference }}</h1>
+	<h1>Transfer {{ transfer.reference }}</h1>
 </div>
 {% endblock header %}
 
