--- a/accounts/templates/dashboard/accounts/transfer_list.html
+++ b/accounts/templates/dashboard/accounts/transfer_list.html
@@ -61,7 +61,7 @@
 				<td>{{ transfer.amount|currency }}</td>
 				<td>{{ transfer.merchant_reference|default:"-" }}</td>
 				<td>{{ transfer.description|default:"-" }}</td>
-				<td>{{ transfer.user }}</td>
+				<td>{{ transfer.user|default:"-" }}</td>
 				<td>{{ transfer.date_created }}</td>
 			</tr>
 			{% endfor %}
