Fix template bug for non-existance form field
When there is only one unpaid source account, the `source_type` field is
not added to the top-up form.  And when this field is passed to the
`form_field.html` partial, the `annotate_field` template tag chokes.

Fixes #6

--- a/accounts/templates/oscar/dashboard/accounts/account_top_up.html
+++ b/accounts/templates/oscar/dashboard/accounts/account_top_up.html
@@ -33,7 +33,9 @@
 	<form action="." method="post">
 		{% csrf_token %}
 		<legend>Transaction</legend>
-		{% include 'partials/form_field.html' with field=form.source_account %}
+        {% if form.source_account %}
+            {% include 'partials/form_field.html' with field=form.source_account %}
+        {% endif %}
 		{% include 'partials/form_field.html' with field=form.amount %}
 		<button type="submit" class="btn btn-large btn-success">{% trans "Save" %}</button>
 	</form>
