Removed oscar from template paths

--- a/sandbox/templates/checkout/thank_you.html
+++ b/sandbox/templates/checkout/thank_you.html
@@ -1,4 +1,4 @@
-{% extends 'oscar/checkout/thank_you.html' %}
+{% extends 'checkout/thank_you.html' %}
 {% load i18n %}
 {% load currency_filters %}
 
